--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>London Trip</title>
 </head>
 <body>
-    
+    <!-- Inizio Header -->
+    <h1>Il mio Viaggio a Londra</h1>
+    <img src="Img/pexels-bill-emrich-230794-0.jpg" alt="">
+    <img src="Img/pexels-bill-emrich-230794-1.jpg" alt="">
+    <img src="Img/pexels-bill-emrich-230794-2.jpg" alt="">
+    <hr>
+    <!-- Fine Header -->
+    <!-- Inizio Main -->
+    <!-- Divisione in Sezioni -->
+    <!-- Fine Main -->
 </body>
 </html>
