--- a/index.html
+++ b/index.html
@@ -8,13 +8,95 @@
 <body>
     <!-- Inizio Header -->
     <h1>Il mio Viaggio a Londra</h1>
-    <img src="Img/pexels-bill-emrich-230794-0.jpg" alt="">
-    <img src="Img/pexels-bill-emrich-230794-1.jpg" alt="">
-    <img src="Img/pexels-bill-emrich-230794-2.jpg" alt="">
+    <img src="Img/pexels-bill-emrich-230794-0.jpg" alt=""><img src="Img/pexels-bill-emrich-230794-1.jpg" alt=""><img src="Img/pexels-bill-emrich-230794-2.jpg" alt="">
     <hr>
     <!-- Fine Header -->
+
     <!-- Inizio Main -->
+    <main>
     <!-- Divisione in Sezioni -->
+    <!-- Inizio Spese -->
+        <section class="Spese">
+            <h2>Le mie Spese</h2>
+            <table>
+                <tr>
+                    <td><b>Numero</b></td>
+                    <td><b>Descrizione</b></td>
+                    <td><b>Costo</b></td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Biglietto Aereo</td>
+                    <td>120&euro;</td>
+                </tr>
+                <tr>
+                    <td>Totale</td>
+                    <td></td>
+                    <td>360&euro;</td>
+                </tr>
+            </table>
+            <hr>
+        </section>   
+        <!-- Fine Spese    -->
+
+        <!-- Inizio Cose da fare -->
+        <section class="Cosa fare">
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &#x2717;</li>
+                <li>Visitare Greenwich &#10003;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#10003;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#x2717;</li>
+            </ul>
+            <hr>
+        </section>
+        <!-- Fine Cose da fare -->
+
+        <!-- Inizio Info -->
+        <section class="Info">
+            <h3>Info utili:</h3>
+            <ol>
+                <li>Numeri utili di emergenza
+                    <ul>
+                        <li><b>999</b> - Emergenza</li>
+                        <li><b>101</b> - Polizia</li>
+                        <li><b>111</b> - Numero assistenza medica</li>
+                    </ul>
+                </li>
+                <li>Hotel
+                    <ul>
+                        <li><b>Nome hotel:</b>Buckingham Palace</li>
+                        <li><b>Indirizzo hotel:</b>Westminster, London SW1A 1AA,Regno Unito</li>
+                    </ul>
+                </li>
+                <li>Aereo
+                    <ul>
+                        <li><b>Volo di Andata:</b> YI1234X, ore 9:30 da Milano Malpensa</li>
+                        <li><b>Volo di Ritorno:</b> YI1236X, ore 18:30 da London Heathrow</li>
+                    </ul>
+                </li>
+            </ol>
+            <hr>
+        </section>
+        <!-- Fine Info -->
+        <aside>
+            <h3>Le foto</h3>
+            <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Foto Londra 1">
+            <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Foto Londra 2">
+        </aside>
+        <hr>
+    </main>
     <!-- Fine Main -->
+    <footer><em>Made with &hearts; by <strong>Vincenzo</strong> Classe <b>#107</b></em></footer>
 </body>
 </html>
